<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/nav_my_profile"
            android:title="@string/my_profile"
            android:icon="@drawable/ic_profile"/>

        <item
            android:id="@+id/nav_sell"
            android:title="@string/sell"
            android:icon="@drawable/ic_sell"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>
    </group>

    <item android:title="Communicate">

        <menu>

            <item
                android:id="@+id/nav_about"
                android:title="@string/about"
                android:icon="@drawable/ic_about"/>

            <item
                android:id="@+id/nav_feedback"
                android:title="@string/feedback"
                android:icon="@drawable/ic_feedback"/>

            <!--<item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />-->
        </menu>

    </item>

</menu>